--- a/lab06/styles.css
+++ b/lab06/styles.css
@@ -1,3 +1,5 @@
 body {font-family: Verdana (sans-serif);}
 h1, h2 {color:darkolivegreen}
-.selector.evenrow {background-color: darkkhaki;}
+.evenrow {background-color: darkkhaki;}
+.h1 {font-size: 3 em;}
+.h2 {font-size: 2 em;}
