--- a/lab06/styles.css
+++ b/lab06/styles.css
@@ -1,5 +1,5 @@
 body {font-family: Verdana (sans-serif);}
 h1, h2 {color:darkolivegreen}
 .evenrow {background-color: darkkhaki;}
-.h1 {font-size: 3 em;}
-.h2 {font-size: 2 em;}
+.h1 {font-size: 3 em; color:darkolivegreen}
+.h2 {font-size: 2 em; color:darkolivegreen}
