--- a/lab06/styles.css
+++ b/lab06/styles.css
@@ -1,4 +1,4 @@
-body {font-family: Verdana (sans-serif);}
+body {font-family: 'Times New Roman', Times, serif;}
 h1, h2 {color:darkolivegreen}
 .evenrow {background-color: darkkhaki;}
 .h1 {font-size: 3 em; color:darkolivegreen}
