--- a/lab07/styles.css
+++ b/lab07/styles.css
@@ -1,5 +1,5 @@
-body {color: #bfb5b2;}
+body {background-color: #bfb5b2;}
 h1, h2 {color: #5e3c58}
-text {color: #000000}
+p {color: #000000}
 link {color: #83adb5}
-nav {background-color: #FFFFFF}
+nav {background-color: #000000}
