--- a/lab10/styles.css
+++ b/lab10/styles.css
@@ -6,3 +6,5 @@ nav {background-color: #000000;}
 nav a:hover {background-color: #c7bbc9}
 nav {padding: 10px}
 nav {margin-bottom: 30 px}
+@media only screen and (max-width: 760px) {
+    nav a {display: 100%;}}
