--- a/lab10/styles.css
+++ b/lab10/styles.css
@@ -8,3 +8,4 @@ nav {padding: 10px}
 nav {margin-bottom: 30 px}
 @media only screen and (max-width: 760px) {
     nav a {display: 100%;}}
+    nav span {display: none;}
