--- a/lab10/styles.css
+++ b/lab10/styles.css
@@ -7,5 +7,5 @@ nav a:hover {background-color: #c7bbc9}
 nav {padding: 10px}
 nav {margin-bottom: 30 px}
 @media only screen and (max-width: 760px) {
-    nav link {display: 100%;}}
+    nav .mylink {display: 100%;}}
     nav span {display: none;}
