--- a/lab10/styles.css
+++ b/lab10/styles.css
@@ -3,9 +3,10 @@ h1, h2 {color: #5e3c58;}
 p {color: #000000;}
 nav a {color: #83adb5;}
 nav {background-color: #000000;}
-nav a:hover {background-color: #c7bbc9}
-nav {padding: 10px}
-nav {margin-bottom: 30 px}
+nav a:hover {background-color: #c7bbc9;}
+nav {padding: 10px;}
+nav {margin-bottom: 30 px;}
 @media only screen and (max-width: 760px) {
-    nav .mylink {display: 100%;}}
+    nav a {display: block; width: 100%; padding: 5px;}
     nav span {display: none;}
+}
