--- a/lab13/styles.css
+++ b/lab13/styles.css
@@ -2,8 +2,8 @@ body {background-color: #bfb5b2;}
 font {font-size: 2em;}
 h1, h2 {color: #5e3c58; padding: 10px;}
 p {color: #000000;}
-nav a {color: #83adb5;}
-nav {background-color: #000000;}
+nav a {color: #263C40;}
+nav {background-color: #FFFFFF;}
 nav a:hover {background-color: #c7bbc9;}
 nav {padding: 10px;}
 nav {margin-bottom: 30 px;}
