--- a/lab13/styles.css
+++ b/lab13/styles.css
@@ -11,3 +11,4 @@ nav {margin-bottom: 30 px;}
     nav a {display: block; width: 100%; padding: 5em;}
     nav span {display: none;}
 }
+a {color: #000000;}
