--- a/project07/styles.css
+++ b/project07/styles.css
@@ -13,7 +13,7 @@
         }
 body {background-color: #CBCBCB;}
 .allbody {display: flex; margin-left: auto; margin-right: auto; max-width: 1200px; justify-content: center; flex-wrap: wrap;}
-h1 {color: #6D8196; font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif; text-align: center;}
+h1 {color: #4A4A4A; font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif; text-align: center;}
 p {color: #000000; font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif; text-align: center;}
 nav {background-color: #FFFFE3; padding: 10px; margin-bottom: 30 px;}
 nav a {color: #000000; font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif;}
