--- a/project07/styles.css
+++ b/project07/styles.css
@@ -14,6 +14,7 @@
 body {background-color: #CBCBCB;}
 .allbody {display: flex; margin-left: auto; margin-right: auto; max-width: 1200px; justify-content: center; flex-wrap: wrap;}
 h1 {color: #4A4A4A; font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif; text-align: center;}
+h2 {color: #4A4A4A; font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif; text-align: center;}
 p {color: #000000; font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif; text-align: center;}
 nav {background-color: #FFFFE3; padding: 10px; margin-bottom: 30 px;}
 nav a {color: #000000; font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif;}
@@ -23,7 +24,45 @@ footer {background-color: #FFFFE3; padding: 0.09px;}
 .headshot {padding: 10px; height: 15%; width: 15%; display: block; margin: 2em auto 2em auto; background-color: #6D8196; flex-basis: 50%;}
 .exampleimage {padding: 10px; display: block; height: 15%; width: 15%; margin: 1em; background-color: #6D8196; flex-basis: 50%;}
 .outercontainer {display: flex;}
+
 @media only screen and (max-width: 760px) {
     nav a {display: block; width: 100%; padding: 5px;}
     nav span {display: none;}
+}
+
+* {box-sizing: border-box;}
+.mySlides {display: none;}
+.slidesimage {vertical-align: middle;}
+
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+.active {
+  background-color: #6D8196;
+}
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
 }
