--- a/project07/styles.css
+++ b/project07/styles.css
@@ -12,22 +12,23 @@
         height: auto;
         }
 body {background-color: #CBCBCB;}
-.allbody {display: flex; margin-left: auto; margin-right: auto; max-width: 1200px; justify-content: center; flex-wrap: wrap;}
+.mainme {display: flex;}
+.allbody {display: flex; margin-left: auto; margin-right: auto; max-width: 1200px; justify-content: center; align-items: center; flex-wrap: wrap;}
 h1 {color: #4A4A4A; font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif; text-align: center;}
 h2 {color: #4A4A4A; font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif; text-align: center;}
 p {color: #000000; font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif; text-align: center;}
-nav {background-color: #FFFFE3; padding: 10px; margin-bottom: 30 px;}
+nav {background-color: #FFFFE3; padding: 10px; margin-bottom: 30px;}
 nav a {color: #000000; font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif;}
 .largenav {display: flex; justify-content: space-between;}
 nav a:hover {background-color: #6D8196;}
-footer {background-color: #FFFFE3; padding: 0.09px;}
+footer {background-color: #FFFFE3; padding: 0.09px; margin-top: 30px;}
 .headshot {padding: 10px; height: 15%; width: 15%; display: block; margin: 2em auto 2em auto; background-color: #6D8196; flex-basis: 50%;}
 .exampleimage {padding: 10px; display: block; height: 15%; width: 15%; margin: 1em; background-color: #6D8196; flex-basis: 50%;}
 .outercontainer {display: flex;}
 
 @media only screen and (max-width: 760px) {
-    nav a {display: block; width: 100%; padding: 5px;}
-    nav span {display: none;}
+    .largenav a {display: block; width: 100%; padding: 5px;}
+    .largenav span {display: none;}
 }
 
 * {box-sizing: border-box;}
@@ -35,7 +36,7 @@ footer {background-color: #FFFFE3; padding: 0.09px;}
 .slidesimage {vertical-align: middle;}
 
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 1750px;
   position: relative;
   margin: auto;
 }
