--- a/project07/styles.css
+++ b/project07/styles.css
@@ -14,17 +14,16 @@
 body {background-color: #CBCBCB;}
 .mainme {display: flex;}
 .allbody {display: flex; margin-left: auto; margin-right: auto; max-width: 1200px; justify-content: center; align-items: center; flex-wrap: wrap;}
-h1 {color: #4A4A4A; font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif; text-align: center;}
-h2 {color: #4A4A4A; font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif; text-align: center;}
-p {color: #000000; font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif; text-align: center;}
+h1 {color: #4A4A4A; font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif; text-align: center; padding: 0.15em; font-size: 2.5em;}
+h2 {color: #4A4A4A; font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif; text-align: center; font-size: 2.5em;}
+p {color: #000000; font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif; text-align: center; font-size: 25px; padding: 1em;}
 nav {background-color: #FFFFE3; padding: 10px; margin-bottom: 30px;}
 nav a {color: #000000; font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif;}
 .largenav {display: flex; justify-content: space-between;}
 nav a:hover {background-color: #6D8196;}
 footer {background-color: #FFFFE3; padding: 0.09px; margin-top: 30px;}
 .headshot {padding: 10px; height: 15%; width: 15%; display: block; margin: 2em auto 2em auto; background-color: #6D8196; flex-basis: 50%;}
-.exampleimage {padding: 10px; display: block; height: 15%; width: 15%; margin: 1em; background-color: #6D8196; flex-basis: 50%;}
-.outercontainer {display: flex;}
+.exampleimage {padding: 10px; display: block; height: 25%; width: 25%; margin: 1em; background-color: #6D8196; flex-basis: 50%;}
 
 @media only screen and (max-width: 760px) {
     .largenav a {display: block; width: 100%; padding: 5px;}
